Ajout du web service GraphQl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.h2.console.enabled=true
 server.port=8081
 springdoc.swagger-ui.path=/swagger-ui.html
 spring.graphql.graphiql.enabled=true
+spring.cloud.discovery.enabled=true
